tests/snapshots/examples_fixtures/type_system__failing__208_stage_type_suppresses_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/208_stage_type_suppresses_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E406]: Unhandled Root Effect

`fn main` has undischarged effects: Mystery.

  examples/type_system/failing/208_stage_type_suppresses_effect.flx:13:19
   |
13 | fn main() with IO {
   |                   ^
14 |     print(greet(42))
   | ^^^^^^^^^^^^^^^^^^^^
15 |     bad()
   | ^^^^^^^^^
16 | }
   | ^

Hint:
  Handle these effects explicitly with `... handle Effect { ... }` before returning from `main`.


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `greet`.

  examples/type_system/failing/208_stage_type_suppresses_effect.flx:14:17
   |
 5 | fn greet(name: String) -> String {
 6 |     "Hello, #{name}!"
 7 | }
 8 | 
 9 | fn bad() with Mystery {
10 |     1
11 | }
12 | 
13 | fn main() with IO {
14 |     print(greet(42))
   |                 ^^
   |                 -- this argument has type `Int`

Note:
  expected argument type: String
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.


error[E400]: Missing Effect

requires effect `Mystery` but the enclosing context does not provide it

  examples/type_system/failing/208_stage_type_suppresses_effect.flx:15:5
   |
15 |     bad()
   |     ^^^^^
   |     ----- requires `Mystery`

Hint:
  annotate the enclosing function with `with Mystery`


Warning: missing CFG bytecode binding for IR call dest



Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 3 errors and 1 warning.
== stdout ==
<not executed>
